# SkillForge

./: README.md  pyproject.toml
docs/: SAGE.md  architecture.md  related_papers.md  skill_recommender.md  skillforge_demo.html  skillforge_paper.md
examples/benchmarks/data/: README.md  tester.py
examples/benchmarks/demo/: config_loader.py  custom_fitness_metric_tech_keywords.py  demo.py  demo_config.py  runner.py
examples/benchmarks/demo/helpers/: ascii_plotter.py  plotter.py  printer_mode_summary.py  printer_skill.py  printer_skill_diff.py
examples/benchmarks/demo/steps/: step_00_write_demo_scenario_files.py  step_01_build_skill_dataset_and_dspy.py  step_02_evaluate_baseline.py  step_03_run_gepa_plain.py  step_04_run_gepa_focused_on_difficulty.py  step_05_run_gepa_gated.py  step_06_run_gepa_full.py  step_07_results_comparison.py  step_08_plot_results.py  step_matrix_run_gepa.py  step_matrix_save.py
examples/benchmarks/demo/trainings/: trainings.py
examples/benchmarks/fitness_metrics_oracle/: runner.py
examples/benchmarks/skill_recommender/: embedder.py  recommender.py  recommender_builder.py  runner.py
examples/other/: offline_01_gepa_evolve.py  offline_02_dataset_from_external.py  offline_03_cli_dry_run_and_caching.py  offline_04_metrics_history_and_batch_evolve.py
skillforge/: __init__.py  __main__.py  cli.py
skillforge/evolvers/: skill_evolver_batch.py  skill_evolver_prereqs.py  skill_evolver_single.py
skillforge/external_importers/: dataset_builder.py  skill_example_extractor.py
skillforge/skills/: skill_lister.py
(+31 files in other folders)
