[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillforge"
version = "0.1.0"
description = "Offline GEPA evolutionary optimizer for Jiuwen SKILL.md files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary — Huawei Technologies Co., Ltd." }
authors = [
    { name = "Huawei Technologies Co., Ltd." },
]
dependencies = [
    "click>=8.0",
    "dspy>=3.0.0",
    "nltk>=3.8",
    "PyYAML>=6.0",
    "rich>=13.0",
]

[project.scripts]
skillforge = "skillforge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
examples = [
    "matplotlib>=3.8",   # plotting in demo step_08
    "datasets>=2.0",     # HuggingFace benchmark scenarios
]

[tool.hatch.build.targets.wheel]
packages = ["skillforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
